force-app/main/default/objects/amorgan__Race__c/fields/amorgan__EndDate__c.field-meta.xml
<CustomField>
    <fullName>amorgan__EndDate__c</fullName>
    <label>EndDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>