force-app/main/default/objects/amorgan__Race__c/fields/amorgan__FirstPlaceAward__c.field-meta.xml
<CustomField>
    <fullName>amorgan__FirstPlaceAward__c</fullName>
    <label>FirstPlaceAward</label>
    <length>54</length>
    <type>Text</type>
</CustomField>