force-app/main/default/objects/amorgan__Race__c/fields/amorgan__SecondPlaceAward__c.field-meta.xml
<CustomField>
    <fullName>amorgan__SecondPlaceAward__c</fullName>
    <label>SecondPlaceAward</label>
    <length>54</length>
    <type>Text</type>
</CustomField>