force-app/main/default/objects/amorgan__Race__c/fields/amorgan__ThirdPlaceAward__c.field-meta.xml
<CustomField>
    <fullName>amorgan__ThirdPlaceAward__c</fullName>
    <label>ThirdPlaceAward</label>
    <length>54</length>
    <type>Text</type>
</CustomField>