force-app/main/default/objects/amorgan__Race__c/fields/amorgan__type__c.field-meta.xml
<CustomField>
    <fullName>amorgan__type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Amount</fullName>
            </value>
            <value>
                <fullName>Closed Volume</fullName>
            </value>
            <value>
                <fullName>Created Amount</fullName>
            </value>
            <value>
                <fullName>Created Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>