force-app/main/default/objects/amorgan__Race__c/listViews/amorgan__All.listView-meta.xml
<ListView>
    <fullName>amorgan__All</fullName>
    <columns>NAME</columns>
    <columns>amorgan__StartDate__c</columns>
    <columns>amorgan__EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>